--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://goitacademy.github.io/parcel-project-template",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url ./test-page"
+    "build": "parcel build src/*.html --public-url ./"
   },
   "repository": {
     "type": "git",
