--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "homepage": "https://goitacademy.github.io/parcel-project-template",
   "scripts": {
-    "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /test-page/"
+    "start": "parcel src/*.html  --open",
+    "build": "parcel build src/*.html --public-url ./test-page/"
   },
   "repository": {
     "type": "git",
